--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,11 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
     }
+
+}
+
+plugins {
+    id "org.sonarqube" version "2.7"
 }
 
 allprojects {
